--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -4,17 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="borna.hl.MainActivity">
+    tools:context="borna.hl.RouteActivity">
 
-    <com.mapbox.mapboxsdk.maps.MapView
-        android:id="@+id/mapView"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:mapbox_cameraTargetLat="37.17616"
-        app:mapbox_cameraTargetLng="-3.58809"
-        app:mapbox_cameraZoom ="11"
-        />
-
-    
+        android:text="blabla"/>
 
 </RelativeLayout>
